syntax = "proto3";

option csharp_namespace = "MahjongServer";


package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamTest (stream StreamRequest) returns (stream StreamReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message StreamRequest
{
   int32 id = 1;
   string message = 2;
   
}

message StreamReply
{
   string message = 1;
}
